<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/mainlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:text="TextView" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonEqual"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btnequalClick"
                android:text="@string/button_equal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="7dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button01"
                android:layout_width="wrap_content"
                android:layout_height="78dp"
                android:layout_weight="1"
                android:onClick="btn01Click"
                android:text="@string/button_01" />

            <Button
                android:id="@+id/button02"
                android:layout_width="wrap_content"
                android:layout_height="78dp"
                android:layout_weight="1"
                android:onClick="btn02Click"
                android:text="@string/button_02" />

            <Button
                android:id="@+id/button03"
                android:layout_width="wrap_content"
                android:layout_height="78dp"
                android:layout_weight="1"
                android:onClick="btn03Click"
                android:text="@string/button_03" />

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="wrap_content"
                android:layout_height="78dp"
                android:layout_weight="1"
                android:onClick="btnAddClick"
                android:text="@string/button_add" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonMult"
                android:layout_width="wrap_content"
                android:layout_height="78dp"
                android:layout_weight="1"
                android:onClick="btn04Click"
                android:text="@string/button_04" />

            <Button
                android:id="@+id/button07"
                android:layout_width="wrap_content"
                android:layout_height="78dp"
                android:layout_weight="1"
                android:onClick="btn05Click"
                android:text="@string/button_05" />

            <Button
                android:id="@+id/button06"
                android:layout_width="wrap_content"
                android:layout_height="78dp"
                android:layout_weight="1"
                android:onClick="btn06Click"
                android:text="@string/button_06" />

            <Button
                android:id="@+id/buttonSub"
                android:layout_width="wrap_content"
                android:layout_height="78dp"
                android:layout_weight="1"
                android:onClick="btnSubClick"
                android:text="@string/button_sub" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="118dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button07"
                android:layout_width="wrap_content"
                android:layout_height="78dp"
                android:layout_weight="1"
                android:onClick="btn07Click"
                android:text="@string/button_07" />

            <Button
                android:id="@+id/button08"
                android:layout_width="wrap_content"
                android:layout_height="78dp"
                android:layout_weight="1"
                android:onClick="btn08Click"
                android:text="@string/button_08" />

            <Button
                android:id="@+id/button09"
                android:layout_width="wrap_content"
                android:layout_height="78dp"
                android:layout_weight="1"
                android:onClick="btn09Click"
                android:text="@string/button_09" />

            <Button
                android:id="@+id/buttonDiv"
                android:layout_width="wrap_content"
                android:layout_height="78dp"
                android:layout_weight="1"
                android:onClick="btnDivClick"
                android:text="@string/u00F7" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonCE"
                android:layout_width="wrap_content"
                android:layout_height="78dp"
                android:layout_weight="1"
                android:onClick="btnCClick"
                android:text="@string/button_CE" />

            <Button
                android:id="@+id/button00"
                android:layout_width="wrap_content"
                android:layout_height="78dp"
                android:layout_weight="1"
                android:onClick="btn00Click"
                android:text="@string/button_00" />

            <Button
                android:id="@+id/buttonDot"
                android:layout_width="wrap_content"
                android:layout_height="78dp"
                android:layout_weight="1"
                android:onClick="btnDotClick"
                android:text="@string/button_dot" />

            <Button
                android:id="@+id/buttonMult"
                android:layout_width="wrap_content"
                android:layout_height="78dp"
                android:layout_weight="1"
                android:onClick="btnMulClick"
                android:text="@string/u00D7" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>